修改排行榜样式 添加搜索单一的排行榜

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity
             android:name=".mvp.ui.activity.RankingActivity"
             android:label="@string/title_activity_ranking"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.RankDetailActivity"
+            android:label="@string/title_activity_rank_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
