添加书籍详细页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity
             android:name=".mvp.ui.activity.RankDetailActivity"
             android:label="@string/title_activity_rank_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.BookDetailActivity"
+            android:label="@string/title_activity_book_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
