修改分类跳转 添加二级分类页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <activity
             android:name=".mvp.ui.activity.CategoryActivity"
             android:label="@string/title_activity_category"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.CategortBookActivity"
+            android:label="@string/title_activity_categort_book"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
