--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.boge.bogebook">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:name=".BookApplication"
         android:allowBackup="true"
@@ -40,6 +41,10 @@
         <activity
             android:name=".mvp.ui.activity.CategortBookActivity"
             android:label="@string/title_activity_categort_book"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.LocalBookActivity"
+            android:label="@string/title_activity_local_book"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
