--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main{
+            java.srcDirs = ['src/main/java' , 'src/main/java-gen']
+        }
+    }
 }
 
 dependencies {
@@ -33,20 +38,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
-
-
-
-
-
-
+    testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:24.2.0'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.google.code.gson:gson:2.4'
@@ -58,8 +59,11 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.google.dagger:dagger:2.4'
     compile 'org.glassfish:javax.annotation:10.0-b28'
-    testCompile 'junit:junit:4.12'
     apt 'com.google.dagger:dagger-compiler:2.4'
+
+    compile 'org.greenrobot:greendao:3.2.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
