添加主题书单页面 ， 获取主题书单标签

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".mvp.ui.activity.SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.ThemeBookActivity"
+            android:label="@string/title_activity_theme_book"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
