主题书单上拉加载

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
         <activity
             android:name=".mvp.ui.activity.ThemeBookActivity"
             android:label="@string/title_activity_theme_book"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.BookListDetailActivity"
+            android:label="@string/title_activity_book_list_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
