--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:name=".mvp.ui.activity.ThemeBookActivity"
             android:label="@string/title_activity_theme_book"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".mvp.ui.activity.AuthorActivity"
+            android:label="@string/title_activity_author"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
